# belanak

./: .gitignore  README.md  converter.py  data.jsonl  main.py  pyproject.toml
.github/workflows/: development.yml  production.yml  staging.yml
app/: __init__.py
app/appctx/: __init__.py
app/core/: __init__.py
app/presentation/: request.py
app/router/: http.py
app/ucase/: chat.py  finetune.py  health.py
app/ucase/chat/: __init__.py  chat.py
app/ucase/finetune/: __init__.py  cancel.py  create.py  list.py  start.py
app/ucase/model/: __init__.py  list.py
bootstrap/: database.py  mistral.py
deployment/: env-dev.sh  env-prd.sh  env-stg.sh
deployment/gcp/domain/: development.sh  production-intl.sh  production.sh  staging.sh
deployment/gcp/gclb/: production-green.sh  production.sh
deployment/helm/: values.yaml.tpl
pkg/database/: mysql.py
pkg/mistral/: __init__.py  codestral.py  finetune.py  general.py
pkg/utils/: __init__.py
